<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="one_pay">1Pay</string>
    <string name="action_settings">Settings</string>
    <string name="enter_card_number">Nhập số dưới lớp bạc</string>
    <string name="enter_card_serial">Nhập mã Serial</string>
    <string name="title_show_view_option">HÌNH THỨC THANH TOÁN</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="gameapp">Diệt Thần</string>
    <string name="accountname">1paysdk</string>
    <string name="payment">Thanh toán</string>
    <string name="send">Gửi</string>
    <string name="cancel">Cancel</string>
    <string name="oke">Ok</string>
    <string name="titlelang">Change language</string>
    <string name="contentlang">Change language needs to rebound form of payment.\nAre you sure you want to change?</string>
    <string name="charging">Charing...</string>
    <string name="card_charging">Thẻ cào</string>
    <string name="subscription">Subscription</string>
    <string name="sms_charging">Tin nhắn SMS</string>
    <string name="sms_please_wait">Vui lòng chờ, tin nhắn đang được xử lý</string>
    <string name="smsplus_charging">Tin nhắn SMS Plus</string>
    <string name="swap_charging">Thanh toán trực tiếp</string>
    <string name="sim_card_no_support">Sim của bạn không hỗ trợ, chỉ hỗ trợ các nhà mạng sau: </string>
    <string name="init_config">Tải cấu hình</string>
    <string name="choose_price">(Chọn số tiền cần nạp)</string>
    <string name="choose_card_type"> (Chọn loại thẻ)</string>
    <string name="wap_warning"><b>Lưu ý:</b> Bạn cần sử dụng kết nối 3G/GPRS để nạp tiền qua hình thức này</string>
    <string name="currency_exchange_rate">Mệnh giá quy đổi</string>
    <string name="get_data_error">Lấy dữ liệu thất bại, thử lại</string>
    <string name="tran_success">Thanh toán thành công</string>
    <string name="tran_failed">Thanh toán thất bại</string>
    <string name="title_m_dialog_notify">Thông báo</string>
    <string name="sms_sent">Tin nhắn đã được gửi</string>
    <string name="sms_noservice">Không có dịch vụ mạng</string>
    <string name="sms_not_delivered">Tin nhắn không được gửi đi</string>
    <string name="network_warning">Bạn cần sử dụng kết nối 3G hoặc Wifi  để nạp tiền qua hình thức này!<br>vui lòng thử lại</br></string>
    <string name="network_warning_type_mobile">Bạn cần sử dụng kết nối 3G/GPRS để nạp tiền qua hình thức này!<br>Vui lòng thử lại</br></string>
    <string name="title_network_warning">Thông báo lỗi</string>
    <string name="money_sms">Bạn phải chọn số tiền để nạp</string>
    <string name="err_enter_card">Bạn phải nhập đủ loại thẻ, mã thẻ, serial</string>
    <string name="load_data_err">Tải dữ liệu về bị lỗi</string>
    <string name="errornopayment">Hiện tại không có hình thức thanh toán phù hợp</string>

    <string-array name="card_type">
        <item>(Chọn loại thẻ)</item>
        <item>VIETTEL</item>
        <item>MOBIFONE</item>
        <item>VINAPHONE</item>
    </string-array>
    <string-array name="map_shortcodes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="prices">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
    </string-array>
    <!-- thong tin lien he -->
    <string name="hotline"><b>Hotline:</b></string>
    <string name="hotlinemot">(+84) 90 4669933 </string>
    <string name="hotlinehai">(+84) 90 4253125</string>
    <string name="telsuport">(+84) 96 4222628</string>
    <string name="title_about"><b>Thông tin liên hệ</b></string>
    <string name="aboutsdksuport"><b>Chăm sóc khách hàng:</b></string>
    <string name="tel_fax"><b>Tel/Fax:</b>(+84) 4 364 066 27</string>
    <string name="email"><b>Email:</b> info@1pay.vn</string>
    <!-- hướng dẫn nạp tiền bằng card -->
    <string name="helpcard">Hướng dẫn nạp tiền bằng thẻ cào</string>
    <string name="help_card_bmot"><b>Bước 1:</b> chọn loại thẻ tại ô chọn loại tên thẻ </string>
    <string name="help_card_bhai"><b>Bước 2:</b> nhập số serial (phần khoanh tròn màu xanh)</string>
    <string name="help_card_bba"><b>Bước 3:</b>nhập số pin dưới lớp bạc(phần khoanh màu đỏ)</string>
    <string name="help_card_bbon"><b>Bước 4:</b> bạn chọn <b>" Thanh toán "</b> để tiến hành nạp thẻ hoặc chọn <b>" Mũi tên quay trở lại "</b> để hủy quá trình nạp thẻ</string>
    <string name="note_card">(<b> lưu ý:</b>Bạn phải bật 3G hoặc Wifi để sử dụng hình thức nạp tiền này)</string>
    <string name="note_card_tow">Số serial và pin chỉ được nhập chữ và số, không viết cách hoặc các ký tự được biệt</string>
    <!-- hướng dẫn nạp tiền bằng iac -->
    <string name="help_iac">Hướng dẫn nạp tiền bằng SMS Plus</string>
    <string name="help_iac_bmot"><b>Bước 1:</b> bạn click vào ô chọn số tiền cần nạp</string>
    <string name="help_iac_bhai"><b>Bước 2:</b> sau khi chọn xong số tiền cần nạp, bạn chọn <b>" Thanh toán "</b> để tiến hành nạp tiền hoặc chọn <b>" Mũi tên quay trở lại "</b> để hủy quá trình nạp tiền thông qua sms plush  </string> <!-- hướng dẫn nạp tiền bằng sms -->
    <string name="help_sms">Hướng dẫn nạp tiền bằng SMS</string>
    <string name="help_sms_bmot"><b>Bước 1:</b> bạn click vào ô chọn số tiền cần nạp</string>
    <string name="help_sms_bhai"><b>Bước 2:</b> sau khi chọn xong số tiền cần nạp, bạn chọn <b>" Thanh toán "</b> để tiến hành nạp tiền hoặc chọn <b>" Mũi tên quay trở lại "</b> để hủy quá trình nạp tiền thông qua sms  </string>

</resources>